--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -15,7 +15,6 @@ $complement-aqua: hsl(20, 99%, 40%);
 $complement-royalblue: hsl(39, 70%, 35%);
 
 $pink-brush: hsl(359, 82%, 72%);
-
 $blue-brush: hsl(209, 33%, 44%);
 $green-brush: hsl(72, 46%, 55%);
 $orange-brush: hsl(27, 77%, 65%);
@@ -23,8 +22,17 @@ $orange-brush: hsl(27, 77%, 65%);
 $red-heart: rgb(186,0,0);
 
 
+$hugest-1300: 1300px;
+$huge-1170: 1170px;
+$larger-1120: 1120px;
+$large-980: 980px;
 $mobile-hamburger: 920px;
+$medium-840: 840px;
 $medium: 780px;
-$small: 560px;
-
-
+$medium-760: 760px;
+$medium-small-700: 700px;
+$small-615: 615px;
+$small-560: 560px;
+$smaller-450: 450px;
+$smaller-400: 400px;
+$tiny-369: 369px;
