--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -108,6 +108,14 @@ section {
     margin-bottom: 10em;
 }
 
+.handprints {
+    height: 120px;
+    background-image: url('../img/handprints.jpg');
+    background-position: left bottom;
+    background-size: contain;
+    background-repeat: repeat-x;
+}
+
 .line__subhdg {
     max-width: 1280px;
     text-transform: uppercase;
