--- a/scss/modules/_program.scss
+++ b/scss/modules/_program.scss
@@ -3,7 +3,6 @@
 }
 
 
-
 .program {
     
     padding-right: 0;
@@ -15,12 +14,25 @@
         grid-template-columns: 1fr 2fr;
         background-color: rgba(0,0,0,.05);
         margin-top: 7em;
+        
+        @include breakpoint (max-width $medium-760) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+            margin-bottom: 10em;
+        }
     }
     
     &__split-cell--one {
         grid-column: 1 / 2;
         position: relative;
         text-align: right;
+        
+        @include breakpoint (max-width $medium-760) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+            text-align: left;
+        }       
+
     }
     
     &__translate {
@@ -30,29 +42,67 @@
         top: 50%;
         transform: translateY(-50%);
         border-top: 5px solid $aqua;
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            padding: 1em;
+        }
+        
+        @include breakpoint (max-width $smaller-400) {
+            padding: .5em;
+        } 
     }
     
     &__translate--one {
-        width: 120%;
-        left: 50%;     
+        width: 150%;
+        left: 0; 
+        
+        @include breakpoint (max-width $medium-760) {
+            width: 80%;
+            left: 10%;
+        }  
+        
+        @include breakpoint (max-width 500px) {
+            width: 90%;
+            left: 5%;
+        } 
+        
+        @include breakpoint (max-width $smaller-450) {
+            width: 100%;
+            left: 0;
+            transform: translateY(0);
+        } 
     }
     
     &__heading {
         font-size: 1.4em;
         font-weight: 300;
-        margin-bottom: 1em;
+        margin-bottom: .5em;
+        
+        @include breakpoint (max-width $smaller-450) {
+            margin-top: .5em;
+        } 
+
     }
     
     &__paraa {
        line-height: 1.4; 
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            font-size: .95em;
+        }
     }
     
     
     &__split-cell--two {
         grid-column: 2 / 3;
         
+        @include breakpoint (max-width $medium-760) {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+        }  
+        
         & img {
-            max-width: 90%;
+            max-width: 100%;
             height: auto;
             display: block;
         
@@ -67,15 +117,39 @@
         display: grid;
         grid-template-columns: 2fr 1fr;
         background-color: rgba(0,0,0,.05);
+        
+        @include breakpoint (max-width $medium-760) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+            margin-bottom: 15em;
+        }
+        
+        @include breakpoint (max-width 500px) {
+            margin-bottom: 27em;
+        }
+        
+        @include breakpoint (max-width $smaller-450) {
+            /* extra top margin as there looks like margin collapsing */
+            margin-top: 16em;
+        } 
     }
     
     &__split-cell--three {
         grid-column: 1 / 2;
         
+        @include breakpoint (max-width $medium-760) {
+            grid-row: 1 / 2;
+        } 
+        
         & img {
-            max-width: 90%;
+            max-width: 120%;
             height: auto;
             display: block;
+            
+            @include breakpoint (max-width $medium-760) {
+                max-width: 100%;
+            } 
+            
         }
     }
     
@@ -83,12 +157,37 @@
         grid-column: 2 / 3;
         position: relative;
         text-align: left;
+        
+        @include breakpoint (max-width $medium-760) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+            text-align: left;
+        }    
     }
     
     &__translate--two {
         /* wider since it has more content */
-        width: 130%;
-        right: 50%;
+        width: 150%;
+        right: 0;
+        
+        @include breakpoint (max-width $medium-760) {
+            width: 80%;
+            left: 10%;
+        } 
+        
+        @include breakpoint (max-width 500px) {
+            width: 90%;
+            left: 5%;
+            
+            /*** using top DOES NOT WORK here  ***/
+            transform: translateY(-30%);
+        } 
+        
+        @include breakpoint (max-width $smaller-450) {
+            width: 100%;
+            left: 0;
+            transform: translateY(0);
+        } 
     }
     
     
