--- a/scss/modules/_curriculum.scss
+++ b/scss/modules/_curriculum.scss
@@ -7,6 +7,10 @@
 .curriculum {
     padding: 10em 0;
     
+    @include breakpoint (max-width $smaller-450) {
+        padding: 8em 0;
+    }
+    
     &__hdg {
         font-family: 'Bubblegum Sans', Arial;
         font-size: 7em;
@@ -26,11 +30,52 @@
         display: flex;
         border-top: 1px solid $gray-lighter;
         border-bottom: 1px solid $gray-lighter;
-        margin-bottom: 6em;
+        margin-bottom: 8em;
+        position: relative;
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            flex-direction: column-reverse;
+            width: 80%;
+            margin: 0 auto 8em auto;
+            border: 0;
+            box-shadow: 0px 0px 2px 2px rgba(0,0,0,.3);
+        }
+        
+        @include breakpoint (max-width $medium-small-700) {
+            width: 90%;
+        }
+        
+        @include breakpoint (max-width $small-615) {
+            width: 100%;
+            box-shadow: 0px 0px 2px 3px rgba(0,0,0,.4);
+        }
+        
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            
+            &:not(.no--line)::before {
+                content: "";
+                background-color: $gray-lighter;
+                width: 50px;
+                height: 2px;
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                top: -4em;
+            }
+            
+        }
+        
     }
+    
+    
     
     &__sect--reverse {
         flex-direction: row-reverse;
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            flex-direction: column-reverse;
+        }
     }
     
     &__image {
@@ -39,7 +84,13 @@
         object-fit: cover;
         
         @include breakpoint (max-width $larger-1120) {
+            
+            /* ??????? */
             font-size: 1.55em;
+        }
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            max-width: 100%;
         }
     }
     
@@ -53,6 +104,18 @@
         color: #fff;
         padding: 1em;
         background-color: $pink-brush;
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            padding: 1em 2em 2em 2em;
+        }
+        
+        @include breakpoint (max-width $small-560) {
+            padding: 1em;
+        }
+        
+        @include breakpoint (max-width $smaller-400) {
+            padding: .5em;
+        }
     }
     
     &__top--blue {
@@ -72,8 +135,19 @@
         font-size: 1.6em;
         line-height: 1.6em;
         text-transform: uppercase;
-        margin-bottom: 12px;
+        margin-bottom: 10px;
         text-align: center;
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            margin-top: 10px;
+            margin-bottom: 14px;
+        }
+        
+        @include breakpoint (max-width $smaller-450) {
+            font-size: 1.45em;
+            line-height: 1.45em;
+        }
+        
     }
     
     &__hearts {
@@ -120,6 +194,19 @@
         @include breakpoint (max-width $larger-1120) {
             line-height: 1.35;
         }
+        
+        @include breakpoint (max-width $mobile-hamburger) {
+            line-height: 1.4;
+        }
+        
+        @include breakpoint (max-width $smaller-450) {
+            font-size: 1.05em;
+        }
+        
+        @include breakpoint (max-width $smaller-400) {
+            font-size: 1em;
+            line-height: 1.3;
+        }
     }
     
     &__link {
@@ -148,6 +235,19 @@
             transform 150ms linear;
         width: 10em;
         text-align: center;
+        
+        @include breakpoint (max-width $medium-760) {
+            margin: 2em auto .5em auto;
+        }
+        
+        @include breakpoint (max-width $small-560) {
+            margin: 2em auto 1em auto;
+        }
+        
+        @include breakpoint (max-width $smaller-450) {
+            font-size: .95em;
+            width: 8em;
+        }
         
         &:hover {
             background-color: #fff;
@@ -210,6 +310,10 @@
         @include breakpoint (max-width $larger-1120) {
             font-size: 1.55em;
         }
+        
+        @include breakpoint (max-width $smaller-400) {
+            font-size: 1.4em;
+        }
     }
     
     &__ratio {
@@ -229,6 +333,10 @@
         font-weight: 700;
         text-transform: uppercase;
         /*transform: translateY(.25em);*/
+        
+        @include breakpoint (max-width $smaller-400) {
+            font-size: .95em;
+        }
     }
     
     &__number {
@@ -238,6 +346,10 @@
         
         @include breakpoint (max-width $larger-1120) {
             font-size: 1.7em;
+        }
+        
+        @include breakpoint (max-width $smaller-400) {
+            font-size: 1.6em;
         }
     }
     
