--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -139,6 +139,10 @@ section {
     letter-spacing: .02em;
     word-spacing: .05em;
     
+    @include breakpoint (max-width $smaller-450) {
+        font-size: 1.5em;
+    }
+    
     &::before {
         content: "";
         height: .3125em;
