--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -17,6 +17,8 @@
     transition: opacity 500ms ease-out, bottom 400ms cubic-bezier(0.64, 0.57, 0.67, 1.23), background-color 300ms ease-out, color 300ms ease-out;
     cursor: pointer;
     
+    border: 1px dashed $aqua;
+    
     // trying to fix btn not showing on mobile
     z-index: 9500;
 
