--- a/scss/modules/_curriculum.scss
+++ b/scss/modules/_curriculum.scss
@@ -5,10 +5,10 @@
 
 
 .curriculum {
-    padding: 10em 0;
+    padding: 10em 0 6em 0;
     
-    @include breakpoint (max-width $smaller-450) {
-        padding: 8em 0;
+    @include breakpoint (max-width $medium-small-700) {
+        padding: 8em 0 3em 0;
     }
     
     &__hdg {
