--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -218,6 +218,10 @@
         position: relative;
         background-color: #fff;
         
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        
         @include breakpoint (max-width $small-560) {
             grid-column: 1 / 2;
             grid-row: 1 / 2;
@@ -234,6 +238,10 @@
         color: #fff;
         text-transform: uppercase;
         font-size: 1.3em;
+        
+        @include breakpoint (max-width $small-560) {
+            flex: 0 0 100%;
+        }
     }
     
     &__teachers-hdg::before {
@@ -304,10 +312,7 @@
         text-align: center;
         
         @include breakpoint (max-width $small-560) {
-            display: inline-block;
-            padding-left: 0;
-            padding-right: 0;
-            margin-left: 3vw;
+            padding: 1em .5em;          
         }
     }
     
@@ -315,7 +320,7 @@
         margin-top: 1em;
         
         @include breakpoint (max-width $small-560) {
-            margin-top: 0;
+            margin-top: 0;          
         }
     }
     
@@ -324,12 +329,9 @@
         
         @include breakpoint (max-width $small-560) {
             margin-bottom: 0;
-            margin-right: 2em;
+            margin-right: 0;
         }
         
-        @include breakpoint (max-width $smaller-450) {
-            margin-right: 1em;
-        }
     }
     
     &__teachers-link {
@@ -357,9 +359,6 @@
     &__teachers-listout--visible {
         display: block;
         height: 100%;
-        
-        //display: flex;
-        //flex-direction: column;
     }
     
     &__teachers-table-wrap {
@@ -376,7 +375,6 @@
         width: 100%;
         height: 100%;
         border-collapse: collapse;
-        //flex: 1;
     }
     
     &__teachers-table tr:nth-of-type(odd) {
