--- a/scss/modules/_aboutus.scss
+++ b/scss/modules/_aboutus.scss
@@ -194,7 +194,7 @@
         }
         
         @include breakpoint (max-width $small-560) {
-            grid-column-gap: 1em;
+            //grid-column-gap: 1em;
             padding-right: 3em;
             padding-left: 1.5em;
         }
@@ -220,9 +220,12 @@
         color: $gray-light;
         font-size: 8em;
         line-height: .5;
-        
         grid-column: 1 / 2;
         transform: translateY(.2em);
+        
+        @include breakpoint (max-width $small-560) {
+            line-height: .4;
+        }
     }
     
 }
