--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -1,3 +1,6 @@
+.hero--overflow {
+    overflow-x: hidden;
+}
 
 
 .hero {
@@ -12,24 +15,6 @@
         color: rgba(255,255,255,.8);
         position: relative;
     }
-    
-    /*&__wrap-two {
-        height: 80vh;
-        background-image: url('../img/hero2.jpg');
-        background-size: cover;
-        
-        color: rgba(255,255,255,.8);
-        width: 1200px;
-    }
-    
-    &__wrap-three {
-        height: 80vh;
-        background-image: url('../img/hero3.jpg');
-        background-size: cover;
-        
-        color: rgba(255,255,255,.8);
-        width: 1200px;
-    }*/
     
     &__center {
         position: absolute;
