--- a/scss/modules/_program.scss
+++ b/scss/modules/_program.scss
@@ -208,6 +208,10 @@
         max-width: 1280px;
         margin: 8em auto 6em auto;
         
+        
+        overflow-x: hidden;
+        
+        
         @include breakpoint (max-width $mobile-hamburger) {
             margin-bottom: 0;
         } 
