--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -9,7 +9,7 @@
     
     &__wrap {    
         height: 75vh;
-        background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero.jpg');
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid.jpg');
         background-size: cover;
         background-attachment: fixed;
         color: rgba(255,255,255,.8);
