working on svg text clip path

--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -14,6 +14,8 @@
         background-attachment: fixed;
         color: rgba(255,255,255,.8);
         position: relative;
+        
+        background-position: center center;
     }
     
     &__center {
