--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -115,7 +115,7 @@ section {
 
 .handprints {
     height: 140px;
-    background-image: url('../img/handprints-updated.jpg');
+    background-image: url('../img/handprints-heart.jpg');
     background-position: left bottom;
     background-size: contain;
     
@@ -174,6 +174,3 @@ section {
     position: absolute;
     height: 63px;
 }
-
-
-
