resized and optimized imgs

--- a/scss/modules/_program.scss
+++ b/scss/modules/_program.scss
@@ -2,7 +2,7 @@
 
 
 .hero__wrap--three {
-    background-image: url('../img/school-room.jpg');
+    background-image: url('../img/school-room--large.jpg');
 }
 
 
