--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -46,7 +46,6 @@ section {
 }
 
 
-
 .pre-heading {
     text-transform: uppercase;
     text-align: center;
@@ -134,7 +133,7 @@ section {
     text-transform: uppercase;
     color: $gray-dark;
     font-size: 1.65em;
-    margin: 0 auto .75em auto;
+    margin: 0 auto 1em auto;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     grid-column-gap: .5em;
