--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -17,9 +17,10 @@
         background-repeat: no-repeat;
         background-position: center center;
         
-        @include breakpoint (max-width $medium-840) {
+        @include breakpoint (max-width 500px) {
             background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid--small.jpg');
             height: 55vh;
+            background-attachment: scroll;
         }
     }
     
