--- a/scss/modules/_aboutus.scss
+++ b/scss/modules/_aboutus.scss
@@ -10,6 +10,10 @@
 
 .hero__wrap--two {
     background-image: url('../img/wall.jpg');
+    
+    @include breakpoint (max-width 500px) {
+        background-image: url('../img/wall--small.jpg');
+    }
 }
 
 .hero__heading {
