--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -1,19 +1,33 @@
 
 .current-cal {
-    padding: 0 0 3em 0;
+    max-width: 1280px;
+    margin: 0 auto 8em auto;
+    padding: 0 2em;
     text-align: center;
-    
-    
-    &__image {
-        max-width: 600px;
-        width: 60%;
-        height: auto;
-        
-        @include breakpoint (max-width $small-560) {
-            width: 90%;
-        }
-    }
-    
+}
+
+.current-cal--svg {
+    width: 100%;
+    height: 100%;
+}
+
+.current-cal--text {
+    font-family: 'Bubblegum Sans', sans-serif;
+    font-size: .55em;
+    text-anchor: middle;
+}
+
+.current-cal--list {
+    display: inline-block;
+    text-align: left;
+}
+
+.current-cal--item {
+    margin-bottom: .75em;
+}
+
+.current-cal--span {
+    font-weight: 700;
 }
 
 
@@ -30,7 +44,7 @@
         overflow: hidden;
     }
     
-    @include breakpoint (max-width $mobile-hamburger) {
+    @include breakpoint (max-width $medium-840) {
         
         &.fullwidth {
             flex-wrap: wrap;
